# -Portfolio-Optimizer-Hierarchical-Regime-Conditional-CPO

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  bootstrap_ci.py  evaluate_folds.py  generate_attention_map.py  generate_paper_plots.py  generate_poster_plots.py  main.py  pyproject.toml  requirements.txt  run_sp_mirror.py
context/: dev_issues.md
docs/: architecture.md  bootstrapping_and_backtesting.md  cucai2026.tex  gnn2Results.md  gnn_architecture.md  gnn_roadmap.md  goals.md  paper.tex  paper2.tex  phase1.md  phase2.md  phase3.md  results_analysis.md  superstate_fix_roadmap.md
experimental/sp_mirror/: README.md  SP_Mirror.md  (+6 more)
results/: bootstrap_ci.csv  feature_importances.csv  gnn_checkpoint_fold1.pt  gnn_checkpoint_fold3.pt  phase3_comparison.csv  shap_importance.csv  strategy_comparison.csv  summary_stats.csv
results2/: ablation_results.csv  feature_importances.csv  phase3_comparison.csv  synthetic_validation_results.csv
results3/: gnn_checkpoint_fold2.pt  gnn_checkpoint_fold3.pt  phase3_gnn_comparison.csv
results5/: gnn_checkpoint_fold1.pt  gnn_checkpoint_fold2.pt  gnn_checkpoint_fold4.pt  phase3_gnn_comparison.csv
results6/: gnn_attention_log.csv  gnn_checkpoint_fold4.pt  phase3_gnn_comparison.csv
src/: __init__.py  ablation.py  backtester.py  benchmarks.py  config.py  data_loader.py  eda.py  features.py  forecaster.py  gnn_data.py  gnn_model.py  gnn_supervisor.py  gnn_train.py  qp_solver.py  shap_analysis.py  sp_mirror_SPY.py  sp_mirror_SPY_Total_Returns.py  supervisor.py  synthetic_validation.py
tests/: __init__.py  test_supervisor.py
(+27 files in other folders)
