[project]
name = "portfolio-optimizer"
version = "0.1.0"
description = "Hierarchical Regime-Conditional Portfolio Optimization (CPO)"
requires-python = ">=3.10,<3.13"
dependencies = [
    "pandas>=2.0.0,<2.2.0",
    "numpy>=1.24.0,<2.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "cvxpy>=1.4.0",
    "scikit-learn>=1.3.0",
    "xgboost>=2.0.0",
    "shap>=0.43.0",
    "numba>=0.61.0",
    "llvmlite>=0.44.0",
]
